// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Avatar/Groups List AvatarMediaList 1`] = `
<div>
  <div
    class="link-list-wrapper"
  >
    <ul
      class="link-list avatar-group"
    >
      <li>
        <a
          class="list-item"
          href="#"
        >
          <div
            class="avatar size-md"
          >
            <img
              alt="Mario Rossi"
              src="https://randomuser.me/api/portraits/men/43.jpg"
            />
          </div>
          <span>
            Mario Rossi
          </span>
        </a>
      </li>
      <li>
        <a
          class="list-item"
          href="#"
        >
          <div
            class="avatar size-md avatar-green"
          >
            <p
              aria-hidden="true"
            >
              AG
            </p>
          </div>
          <span>
            Arianna Gallo
          </span>
        </a>
      </li>
      <li>
        <a
          class="list-item"
        >
          <div
            class="avatar size-md avatar-primary"
          >
            <p
              aria-hidden="true"
            >
              S
            </p>
          </div>
          <span>
            Sara Ghione
          </span>
        </a>
      </li>
      <li>
        <a
          class="list-item"
        >
          <div
            class="avatar size-md"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M12 13c2.2 0 4-1.8 4-4V6c0-2.2-1.8-4-4-4S8 3.8 8 6v3c0 2.2 1.8 4 4 4zM9 6c0-1.7 1.3-3 3-3s3 1.3 3 3v3c0 1.7-1.3 3-3 3s-3-1.3-3-3V6zm11 16h-1c0-3.9-3.1-7-7-7s-7 3.1-7 7H4c0-4.4 3.6-8 8-8s8 3.6 8 8z"
              />
            </svg>
          </div>
          <span>
            Antonio Esposito
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Avatar/Groups List AvatarSmallList 1`] = `
<div>
  <div
    class="link-list-wrapper"
  >
    <ul
      class="link-list avatar-group"
    >
      <li>
        <a
          class="list-item"
          href="#"
        >
          <div
            class="avatar size-sm"
          >
            <img
              alt="Mario Rossi"
              src="https://randomuser.me/api/portraits/men/43.jpg"
            />
          </div>
          <span>
            Mario Rossi
          </span>
        </a>
      </li>
      <li>
        <a
          class="list-item"
          href="#"
        >
          <div
            class="avatar size-sm avatar-orange"
          >
            <p
              aria-hidden="true"
            >
              A
            </p>
          </div>
          <span>
            Arianna Gallo
          </span>
        </a>
      </li>
      <li>
        <a
          class="list-item"
        >
          <div
            class="avatar size-sm avatar-red"
          >
            <p
              aria-hidden="true"
            >
              S
            </p>
          </div>
          <span>
            Sara Ghione
          </span>
        </a>
      </li>
      <li>
        <a
          class="list-item"
        >
          <div
            class="avatar size-sm"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M12 13c2.2 0 4-1.8 4-4V6c0-2.2-1.8-4-4-4S8 3.8 8 6v3c0 2.2 1.8 4 4 4zM9 6c0-1.7 1.3-3 3-3s3 1.3 3 3v3c0 1.7-1.3 3-3 3s-3-1.3-3-3V6zm11 16h-1c0-3.9-3.1-7-7-7s-7 3.1-7 7H4c0-4.4 3.6-8 8-8s8 3.6 8 8z"
              />
            </svg>
          </div>
          <span>
            Antonio Esposito
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
